--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 
     <div class="text-center">
         
-        <img src="https://i.ibb.co/wNX93Tx/profil1.png" class="rounded" alt="...">
+        <img src="https://i.ibb.co/Jq8WVgQ/dpimage.png" class="rounded" alt="...">
     </div>
     
     <!--profil section-->
